2003-03-06  Gary Thomas  <gary@mlbassoc.com>

	* src/cpm.c: Handle case where DPRAM allocation is unknown.
	
	* include/ppc8xx.h: Define limits of CPM/DPRAM space.

2003-03-05  Gary Thomas  <gary@mlbassoc.com>

	* src/quicc_smc1.c: Need to flush data cache because the serial
	driver may set use buffers in cacheable memory.  Without this,
	diag_printf() falls over if the serial driver is ever used.

	* src/cpm.c: New file with CPM/DPRAM support.

	* include/ppc8xx.h: 
	* cdl/hal_powerpc_quicc.cdl: Split out support for CPM/DPRAM.

2002-11-26  Gary Thomas  <gthomas@ecoscentric.com>

	* src/quicc_smc1.c: Initialize BD allocation point.  Note that it is
	different from when the CPM get's reset directly.  This is to allow
	sharing of the space between ROM (RedBoot) code and applications.

	* cdl/hal_powerpc_quicc.cdl: Move platform define here, where it belongs.

2002-11-25  Gary Thomas  <gthomas@ecoscentric.com>

	* src/quicc_smc1.c: Support any combination of SMC1/SMC2 and
	SCC1/SCC2/SCC3 [or at least lay foundation for it]

	* cdl/hal_powerpc_quicc.cdl: Add more controls over port layout.

2002-07-18  Gary Thomas  <gary@chez-thomas.org>

	* src/quicc_smc1.c (cyg_hal_scc1_init_channel): Fix init which
	failed from power-up - wrong channel in CP command!

2002-07-11  Gary Thomas  <gary@chez-thomas.org>

	* src/quicc_smc1.c: 
	* include/quicc_smc1.h: 
	* cdl/hal_powerpc_quicc.cdl: Add support for SCC1 as a serial
	console (for newer chips which have this available).

2002-06-25  Gary Thomas  <gary@chez-thomas.org>

	* src/quicc_smc1.c: 
	* cdl/hal_powerpc_quicc.cdl: Use more common CDL name for baudrate
	CYGNUM_HAL_VIRTUAL_VECTOR_CONSOLE_CHANNEL_BAUD.

2002-05-30  Jesper Skov  <jskov@redhat.com>

	* src/quicc_smc1.c: Fix warning.

2001-09-10  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/hal_powerpc_quicc.cdl (CYGNUM_HAL_QUICC_DIAG_BAUD):
	234000->230400 typo.

2001-07-31  Jonathan Larmour  <jlarmour@redhat.com>